--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,6 @@ You should have  received a copy of the GNU  Lesser General Public License along
 with code. If not, see http://www.gnu.org/licenses/.
 -->
 <resources>
-    <string name="app">Uploader</string>
+    <string name="app">Sensor Uploader</string>
     <string name="info">Device ID</string>
 </resources>
