--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@ You should have  received a copy of the GNU  Lesser General Public License along
 with code. If not, see http://www.gnu.org/licenses/.
 -->
 <resources>
-    <string name="app">Guardian Fall Detector</string>
+    <string name="app">Fall Detector (Experimental)</string>
     <string name="settings">Settings</string>
     <string name="signals">View Signals</string>
     <string name="guardian">Guardian</string>
