Prepared for additional permissions and switched a theme in the AndroidManifest.xml

--- a/fall-detector/src/main/res/values/strings.xml
+++ b/fall-detector/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="help">Help</string>
+    <string name="grant">Grant Permissions</string>
 </resources>
