--- a/fall-detector/src/main/res/values/strings.xml
+++ b/fall-detector/src/main/res/values/strings.xml
@@ -13,6 +13,6 @@
     <string name="accept">Accept</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
-    <string name="help">Help</string>
+    <string name="emergency">Emergency</string>
     <string name="grant">Grant Permissions</string>
 </resources>
