--- a/fall-detector/src/main/res/values/strings.xml
+++ b/fall-detector/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="cancel">Cancel</string>
     <string name="emergency">Emergency</string>
     <string name="grant">Grant Permissions</string>
+    <string name="live">Live</string>
 </resources>
